--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8888:80"
     volumes:
-      - ./:/var/www/html
+      - ./sources:/var/www/html
 
   db:
     image: mysql
