Code : utilisation d'objets, modèles, contrôleurs et autoload (PSR-4)
* adaptation du Makefile
* adaptation du fichier docker-compose.yml
* déplacement des fichiers statiques vers le dossier courant
* utilisation d'objets dans les modèles
* création de contrôleurs
* renommage de `gabarits` en `Vues`
* utilisation de `composer` pour PSR-4 et l'autoload
* utilisation de namespace

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Blankoworld\\Memory\\": "sources"
+        }
     }
 }
