Gabarits : utilisation de Plates comme moteur de templates/gabarits
* modification de `composer` en conséquence
* adaptation des contrôleurs
* ajout de nouvelles vues, dont une principale utilisées pour les autres
vues

--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
         "psr-4": {
             "Blankoworld\\Memory\\": "sources"
         }
+    },
+    "require": {
+        "league/plates": "^3.3"
     }
 }
